[gd_scene load_steps=11 format=3 uid="uid://b4801adrniots"]

[ext_resource type="Script" path="res://scenes/objects/Spawners/spawner.gd" id="1_micgo"]
[ext_resource type="PackedScene" uid="uid://7mnl8wn3hw2e" path="res://scenes/entities/Actor/actor.tscn" id="2_wrdwt"]
[ext_resource type="Texture2D" uid="uid://msajke14wda1" path="res://assets/spawners/spawner.png" id="3_d3guo"]
[ext_resource type="Texture2D" uid="uid://c23exqcv5bo8p" path="res://assets/spawners/eye.png" id="4_sg5c5"]
[ext_resource type="PackedScene" uid="uid://bhkpp6iw15tmm" path="res://scenes/components/Hitbox/HitboxComponent.tscn" id="5_bbd3e"]
[ext_resource type="PackedScene" uid="uid://bpun3plji8rds" path="res://scenes/components/Health/HealthComponent.tscn" id="6_ppvbk"]
[ext_resource type="PackedScene" uid="uid://bsxdnjwwuwcca" path="res://scenes/components/HealthBar/HealthBar.tscn" id="7_l7wyj"]
[ext_resource type="PackedScene" uid="uid://q6ugrdiyry72" path="res://scenes/components/HealthBar/ShieldBar.tscn" id="8_f848a"]
[ext_resource type="Texture2D" uid="uid://gnonhalx3qf5" path="res://assets/spawners/Broken Spawner.png" id="10_81m4b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j0h6w"]
radius = 62.2013

[node name="Spawner" type="Node2D" groups=["points_of_interest"]]
script = ExtResource("1_micgo")
spawn_enemy_scene = ExtResource("2_wrdwt")
max_enemies = 2
enemies_at_once = 1

[node name="DestroyedSpawnerSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("10_81m4b")

[node name="SpawnerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.53125, 0.53125)
texture = ExtResource("3_d3guo")

[node name="Eye" type="Sprite2D" parent="."]
scale = Vector2(0.538462, 0.538462)
texture = ExtResource("4_sg5c5")

[node name="TurretHolder" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ReactivateTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_bbd3e")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_j0h6w")

[node name="HealthComponent" parent="." instance=ExtResource("6_ppvbk")]
MAX_SHIELD = 2000.0
SHIELD_REGEN_VALUE = 50.0
SHIELD_REGEN_BOOST = 1.0
MAX_HEALTH = 500.0

[node name="HealthBar" parent="HealthComponent" instance=ExtResource("7_l7wyj")]
offset_left = -45.0
offset_top = 42.0
offset_right = 44.0
offset_bottom = 48.0
metadata/_edit_use_anchors_ = true

[node name="ShieldBar" parent="HealthComponent" instance=ExtResource("8_f848a")]
offset_left = -45.0
offset_top = 31.0
offset_right = 44.0
offset_bottom = 37.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ReactivateTimer" to="." method="_on_reactivate_timer_timeout"]
